apply plugin: "java-library"

sourceCompatibility = 11
targetCompatibility = 11

allprojects {
    def os = ""
    if (org.gradle.internal.os.OperatingSystem.current().isLinux()) {
        os = "linux"
        project.ext.javafxHelper = ":ui-javafx:linux"
    } else if (org.gradle.internal.os.OperatingSystem.current().isMacOsX()) {
        os = "mac"
        project.ext.javafxHelper = ":ui-javafx:macos"
    } else if (org.gradle.internal.os.OperatingSystem.current().isWindows()) {
        os = "win"
        project.ext.javafxHelper = ":ui-javafx:windows"
    }
    def arch = ""
    if (System.getProperty("os.arch") == "aarch64") {
        arch = "-aarch64"
    }
    project.ext.javaFxVersion = "21.0.1"
    project.ext.javaFxOsSuffix = os
    project.ext.javaFxArchSuffix = arch
    project.ext.javaFx = "${javaFxVersion}:${os}${arch}"
}

dependencies {
    api(project(":engine"))
//    api(project(javafxHelper))

    api "org.openjfx:javafx-base:$javaFx"
    api "org.openjfx:javafx-web:$javaFx"
    api "org.openjfx:javafx-graphics:$javaFx"
    api "org.openjfx:javafx-controls:$javaFx"
    api "org.openjfx:javafx-media:$javaFx"
}

compileJava {
    options.encoding = "UTF-8"
    options.incremental = true
    options.compilerArgs.addAll([
            "--add-exports",
            "javafx.graphics/com.sun.javafx.embed=ALL-UNNAMED"
    ])
    options.compilerArgs.addAll([
            "--add-exports",
            "javafx.graphics/com.sun.javafx.stage=ALL-UNNAMED"
    ])
    options.compilerArgs.addAll([
            "--add-exports",
            "javafx.graphics/com.sun.javafx.cursor=ALL-UNNAMED"
    ])
    options.compilerArgs.addAll([
            "--add-exports",
            "javafx.graphics/com.sun.glass.ui=ALL-UNNAMED"
    ])
    options.compilerArgs.addAll([
            "--add-exports",
            "javafx.graphics/com.sun.javafx.application=ALL-UNNAMED"
    ])
}